# samoyed

./: .commitlintrc.json  .commitlintrc.yml  .gitignore  .golangci.yml  AGENTS.md  AUTHORS.md  CHANGES.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile.direwolf  Makefile  README.md  REUSE.toml  TODO.md  go.mod  go.sum  should-release.sh  version.sh
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: build-and-test.yml  ci.yml  conventional-commits.yml  legacy.yml
appimage/: README.md  build-appimage.sh  io.github.doismellburning.samoyed.appdata.xml  io.github.doismellburning.samoyed.desktop
cmd/: atest.c  gen_packets.c  il2p_test.c
cmd/aclients/: main.go
cmd/appserver/: agwlib.go  main.go
cmd/atest/: main.go  main_test.go
cmd/cm108/: main.go
cmd/crocuta/: main.go
cmd/decode_aprs/: main.go  main_test.go
cmd/direwolf/: main.go
cmd/dwgpsnmea/: main.go
cmd/fxrec/: main.go
cmd/fxsend/: main.go
cmd/gen_packets/: main.go
cmd/gen_tone/: main.go
cmd/kissutil/: main.go
cmd/ll2utm/: main.go  main_test.go
cmd/log2gpx/: main.go  main_test.go
cmd/samoyed/: main.go
cmd/samoyed-aclients/: main.go
cmd/samoyed-appserver/: agwlib.go  main.go
cmd/samoyed-atest/: main.go  main_test.go
cmd/samoyed-axcall/: main.go
cmd/samoyed-axudp/: main.go
cmd/samoyed-cm108/: main_linux.go  main_notlinux.go
cmd/samoyed-decode_aprs/: main.go  main_test.go
cmd/samoyed-direwolf/: main.go
cmd/samoyed-dwgpsnmea/: main.go
cmd/samoyed-fxrec/: main.go
cmd/samoyed-fxsend/: main.go
cmd/samoyed-gen_packets/: main.go
cmd/samoyed-kissutil/: main.go
cmd/samoyed-ll2utm/: main.go  main_test.go
cmd/samoyed-log2gpx/: main.go  main_test.go
cmd/samoyed-text2tt/: main.go  main_test.go
cmd/samoyed-tnctest/: main.go
cmd/samoyed-tt2text/: main.go  main_test.go
cmd/samoyed-ttcalc/: main.go  main_test.go
cmd/samoyed-utm2ll/: main.go  main_test.go
cmd/samoyed-walk96/: main.go
cmd/tnctest/: main.go
cmd/ttcalc/: main.go  main_test.go
cmd/utm2ll/: main.go
cmd/walk96/: main.go
conf/: generic.conf
doc/: CONVENTIONAL_COMMITS.md
docs/: Makefile  README.md  pyproject.toml
docs/source/: conf.py  how-to-guides.rst  index.rst  replacing-ax25-tools.rst
docs/test/: test_build.py
internal/agwlib/: agwlib.go
man/: samoyed-axcall.1  samoyed-direwolf.1
packaging/debian/: control.in
src/: CMakeLists.txt  aclients.c  aclients.go  agwpe.go  agwpe_test.go  ais.c  ais.go  ais_direwolf_test.go  ais_test.go  ais_test_shim.go  appserver.c  appserver.go  aprs.go  aprs_tt.c  aprs_tt.go  aprs_tt.h  aprs_tt_direwolf_test.go  aprs_tt_test.go  aprs_tt_test_shim.go  ardop.go  atest.c  atest.go  atest.h  atest_test.go  atest_wrapper.go  audio.c  audio.go  audio.h  audio_portaudio.c  audio_stats.go  audio_test.go  ax25_link.go  ax25_link_direwolf_test.go  ax25_link_test.go  ax25_link_test_shim.go  ax25_pad.c  ax25_pad.go  ax25_pad.h  ax25_pad2.c  ax25_pad2.go  (+273 more)
test/: CMakeLists.txt
test-scripts/: check-fx25  check-il2p  check-modem1200  check-modem1200-bpsk  check-modem1200-bpsk-il2p  check-modem1200-i  check-modem19200  check-modem2400-a  check-modem2400-b  check-modem2400-g  check-modem300  check-modem300-bpsk  check-modem300-bpsk-il2p  check-modem4800  check-modem9600  check-modem9600-i  check-modemeas  check-udp-audio-connect  common  runall
test/integration/: direwolf_test.go
upstream-tracker/: README.md  config  last-seen  next  queue  sync
